docs: update CN docs and tasks for longtask + heap sampling design and integration

--- a/tasks/2-3-12.design.md
+++ b/tasks/2-3-12.design.md
@@ -142,10 +142,10 @@ from ..utils.event_id import make_event_id
 
 logger = logging.getLogger(__name__)
 
-# 采样配置常量
-HEAP_SAMPLING_INTERVAL = 32768  # bytes, Chrome默认
-HEAP_PROFILE_COLLECTION_INTERVAL = 30.0  # seconds, 比内存收集慢6倍  
-HEAP_SAMPLING_DURATION_LIMIT = 300.0  # seconds, 5分钟重启
+# 采样配置常量（保守设置，优先保证性能稳定性）
+HEAP_SAMPLING_INTERVAL = 65536  # bytes, 64KB采样间隔（比Chrome默认32KB更保守）
+HEAP_PROFILE_COLLECTION_INTERVAL = 60.0  # seconds, 60秒收集周期（更保守）  
+HEAP_SAMPLING_DURATION_LIMIT = 600.0  # seconds, 10分钟重启（减少重启开销）
 HEAP_PROFILE_MAX_NODES = 1000  # 节点数上限
 HEAP_PROFILE_MAX_TOP_ALLOCATORS = 10  # top函数限制
 
@@ -153,10 +153,12 @@ class HeapSamplingMonitor:
     """HeapProfiler采样监控器 - 遵循GCMonitor架构模式"""
     
     def __init__(self, connector: ChromeConnector, session_id: str,
-                 event_queue: asyncio.Queue, status_callback: Optional[Callable] = None):
+                 event_queue: asyncio.Queue, target_id: str = None,
+                 status_callback: Optional[Callable] = None):
         self.connector = connector
         self.session_id = session_id 
         self.event_queue = event_queue
+        self.target_id = target_id  # 新增：用于数据关联
         self.status_callback = status_callback
         self.hostname: Optional[str] = None
         
@@ -218,8 +220,7 @@ class HeapSamplingMonitor:
         """启动HeapProfiler采样"""
         try:
             await self.connector.call("HeapProfiler.startSampling", {
-                "samplingInterval": HEAP_SAMPLING_INTERVAL,
-                "includeObjectsCollectedByMajorGC": True
+                "samplingInterval": HEAP_SAMPLING_INTERVAL
             }, session_id=self.session_id, timeout=5.0)
             
             self.last_sampling_start = time.time()
@@ -289,11 +290,11 @@ class HeapSamplingMonitor:
                 "type": "heap_sampling",
                 "timestamp": datetime.now(timezone.utc).isoformat(),
                 "hostname": self.hostname,
+                "targetId": self.target_id,  # 新增：便于数据关联和归档
                 "sessionId": self.session_id,
                 "sampling_config": {
                     "sampling_interval": HEAP_SAMPLING_INTERVAL,
-                    "duration_ms": int((time.time() - self.last_sampling_start) * 1000),
-                    "include_gc_objects": True
+                    "duration_ms": int((time.time() - self.last_sampling_start) * 1000)
                 },
                 "profile_summary": {
                     "total_size": parsed_result["total_size"],
@@ -444,8 +445,8 @@ async def _enable_comprehensive_monitoring(self):
     self.domstorage_monitor = DOMStorageMonitor(self.connector, self.session_id, self.event_queue, self.status_callback)
     self.gc_monitor = GCMonitor(self.connector, self.session_id, self.event_queue, self.status_callback)
     
-    # 新增：HeapSampling监控器初始化（遵循完全相同的模式）
-    self.heap_sampling_monitor = HeapSamplingMonitor(self.connector, self.session_id, self.event_queue, self.status_callback)
+    # 新增：HeapSampling监控器初始化（遵循完全相同的模式，包含target_id）
+    self.heap_sampling_monitor = HeapSamplingMonitor(self.connector, self.session_id, self.event_queue, self.target_id, self.status_callback)
     
     self.correlation_engine = SimpleCorrelationEngine(self.status_callback)
     
@@ -482,12 +483,12 @@ def __init__(self, connector: ChromeConnector, target_id: str, hostname: str, ..
 ```python
 async def stop_collection(self) -> None:
     """Stop memory collection and cleanup comprehensive monitoring components."""
-    # 所有现有清理代码完全不变
+    # 所有现有清理代码完全不变 - console/network/domstorage/gc监控器停止
     ...
-    # 在现有监控器停止后，新增heap sampling停止
+    # 在现有监控器停止后，新增heap sampling停止和清理
     if self.heap_sampling_monitor:
         await self.heap_sampling_monitor.stop_monitoring()
-        self.heap_sampling_monitor = None
+        self.heap_sampling_monitor = None  # 避免悬挂引用
 ```
 
 **事件消费者处理**（在_consume_events中新增）：
@@ -599,16 +600,42 @@ async def write_heap_sampling_data(self, hostname: str, heap_data: Dict[str, Any
     await self.data_writer.append_jsonl(file_path, heap_data)
 ```
 
-#### 5. DataManager集成方案
+#### 5. DataManager和CLI集成方案
 
-**基于现有DataManager模式，仅需一行代码修改**：
-
-现有的DataManager._handle_data_callback()方法已能自动处理任何类型事件，只需添加heap_sampling类型分发：
-
+**DataManager修改**（在_handle_data_callback()中新增）：
 ```python
 # data/manager.py:_handle_data_callback()中添加一个elif分支
 elif data_type == "heap_sampling":
     await self.data_writer.append_jsonl(f"{hostname}/heap_sampling.jsonl", data)
+```
+
+**新增DataManager方法**（遵循现有命名风格）：
+```python
+# data/manager.py中新增方法
+async def write_heap_sampling_data(self, hostname: str, data: Dict[str, Any]) -> None:
+    """Write heap sampling data to appropriate JSONL file."""
+    if not self.running:
+        return
+    await self.data_writer.append_jsonl(f"{hostname}/heap_sampling.jsonl", data)
+```
+
+**CLI集成**（在comprehensive_data_callback中新增）：
+```python
+# cli.py:comprehensive_data_callback()中新增路由
+elif data_type == "heap_sampling":
+    await data_manager.write_heap_sampling_data(hostname, data)
+```
+
+**overview.json更新**（在_write_session_overview中新增）：
+```python
+# data/manager.py:_write_session_overview()的dataTypes中新增
+"dataTypes": {
+    "memory.jsonl": "Memory usage metrics per hostname",
+    "console.jsonl": "Console logs and JavaScript errors", 
+    "network.jsonl": "Network requests and responses",
+    "gc.jsonl": "Garbage collection events",
+    "heap_sampling.jsonl": "Heap sampling profiles per hostname"  # 新增
+}
 ```
 
 #### 6. TDD测试计划
