--- a/tasks/2.task.md
+++ b/tasks/2.task.md
@@ -2,3 +2,6 @@
 
 ## Subtasks
 - [x] 2-1 小幅事件和I/O优化（TabMonitor事件修复 + DataWriter延迟同步）
+- [x] 2-2 增强数据输出过滤选项
+- [x] 2-3 扩展高级监控功能
+- [ ] 2-4 Source Map支持 - 错误定位到源代码
